so building is a thing